# gensay

./: .coverage  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: security.yml
examples/: demo.py  text_chunking_demo.py
src/gensay/: __init__.py  cache.py  main.py
src/gensay/providers/: amazon_polly.py  chatterbox.py  elevenlabs.py  openai.py
tests/: test_amazon_polly_provider.py  test_cache.py  test_chatterbox_provider.py  test_elevenlabs_provider.py  test_openai_provider.py  test_provider_validation.md  test_provider_validation.py  test_text_chunker.py
